// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with default slot 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; margin-top: 0px; transform: translateX(0px); width: 450px;"
>
  <div>
    <nav
      class="v-toolbar theme--light secondary"
      style="margin-top: 0px; padding-right: 0px; padding-left: 0px; transform: translateY(0px);"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <div
          class="layout row align-center"
        >
          <div
            class="flex white--text subheading"
          >
            Alarm list settings
          </div>
          <button
            class="v-btn v-btn--icon theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light white--text"
              >
                close
              </i>
            </div>
          </button>
        </div>
      </div>
    </nav>
    <hr
      class="v-divider theme--light"
    />
  </div>
  <div
    class="default-slot"
  />
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: alarm-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; margin-top: 0px; transform: translateX(0px); width: 450px;"
>
  <div>
    <nav
      class="v-toolbar theme--light secondary"
      style="margin-top: 0px; padding-right: 0px; padding-left: 0px; transform: translateY(0px);"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <div
          class="layout row align-center"
        >
          <div
            class="flex white--text subheading"
          >
            Alarm list settings
          </div>
          <button
            class="v-btn v-btn--icon theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light white--text"
              >
                close
              </i>
            </div>
          </button>
        </div>
      </div>
    </nav>
    <hr
      class="v-divider theme--light"
    />
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: alarm-statistics-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; margin-top: 0px; transform: translateX(0px); width: 450px;"
>
  <div>
    <nav
      class="v-toolbar theme--light secondary"
      style="margin-top: 0px; padding-right: 0px; padding-left: 0px; transform: translateY(0px);"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <div
          class="layout row align-center"
        >
          <div
            class="flex white--text subheading"
          >
            Alarm statistics settings
          </div>
          <button
            class="v-btn v-btn--icon theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light white--text"
              >
                close
              </i>
            </div>
          </button>
        </div>
      </div>
    </nav>
    <hr
      class="v-divider theme--light"
    />
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: bar-chart-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; margin-top: 0px; transform: translateX(0px); width: 450px;"
>
  <div>
    <nav
      class="v-toolbar theme--light secondary"
      style="margin-top: 0px; padding-right: 0px; padding-left: 0px; transform: translateY(0px);"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <div
          class="layout row align-center"
        >
          <div
            class="flex white--text subheading"
          >
            Bar chart settings
          </div>
          <button
            class="v-btn v-btn--icon theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light white--text"
              >
                close
              </i>
            </div>
          </button>
        </div>
      </div>
    </nav>
    <hr
      class="v-divider theme--light"
    />
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: context-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; margin-top: 0px; transform: translateX(0px); width: 450px;"
>
  <div>
    <nav
      class="v-toolbar theme--light secondary"
      style="margin-top: 0px; padding-right: 0px; padding-left: 0px; transform: translateY(0px);"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <div
          class="layout row align-center"
        >
          <div
            class="flex white--text subheading"
          >
            Context table settings
          </div>
          <button
            class="v-btn v-btn--icon theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light white--text"
              >
                close
              </i>
            </div>
          </button>
        </div>
      </div>
    </nav>
    <hr
      class="v-divider theme--light"
    />
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: counter-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; margin-top: 0px; transform: translateX(0px); width: 450px;"
>
  <div>
    <nav
      class="v-toolbar theme--light secondary"
      style="margin-top: 0px; padding-right: 0px; padding-left: 0px; transform: translateY(0px);"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <div
          class="layout row align-center"
        >
          <div
            class="flex white--text subheading"
          >
            Counter settings
          </div>
          <button
            class="v-btn v-btn--icon theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light white--text"
              >
                close
              </i>
            </div>
          </button>
        </div>
      </div>
    </nav>
    <hr
      class="v-divider theme--light"
    />
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: line-chart-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; margin-top: 0px; transform: translateX(0px); width: 450px;"
>
  <div>
    <nav
      class="v-toolbar theme--light secondary"
      style="margin-top: 0px; padding-right: 0px; padding-left: 0px; transform: translateY(0px);"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <div
          class="layout row align-center"
        >
          <div
            class="flex white--text subheading"
          >
            Line chart settings
          </div>
          <button
            class="v-btn v-btn--icon theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light white--text"
              >
                close
              </i>
            </div>
          </button>
        </div>
      </div>
    </nav>
    <hr
      class="v-divider theme--light"
    />
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: map-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; margin-top: 0px; transform: translateX(0px); width: 450px;"
>
  <div>
    <nav
      class="v-toolbar theme--light secondary"
      style="margin-top: 0px; padding-right: 0px; padding-left: 0px; transform: translateY(0px);"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <div
          class="layout row align-center"
        >
          <div
            class="flex white--text subheading"
          >
            Mapping widget settings
          </div>
          <button
            class="v-btn v-btn--icon theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light white--text"
              >
                close
              </i>
            </div>
          </button>
        </div>
      </div>
    </nav>
    <hr
      class="v-divider theme--light"
    />
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: numbers-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; margin-top: 0px; transform: translateX(0px); width: 450px;"
>
  <div>
    <nav
      class="v-toolbar theme--light secondary"
      style="margin-top: 0px; padding-right: 0px; padding-left: 0px; transform: translateY(0px);"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <div
          class="layout row align-center"
        >
          <div
            class="flex white--text subheading"
          >
            Numbers settings
          </div>
          <button
            class="v-btn v-btn--icon theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light white--text"
              >
                close
              </i>
            </div>
          </button>
        </div>
      </div>
    </nav>
    <hr
      class="v-divider theme--light"
    />
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: pie-chart-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; margin-top: 0px; transform: translateX(0px); width: 450px;"
>
  <div>
    <nav
      class="v-toolbar theme--light secondary"
      style="margin-top: 0px; padding-right: 0px; padding-left: 0px; transform: translateY(0px);"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <div
          class="layout row align-center"
        >
          <div
            class="flex white--text subheading"
          >
            Pie chart settings
          </div>
          <button
            class="v-btn v-btn--icon theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light white--text"
              >
                close
              </i>
            </div>
          </button>
        </div>
      </div>
    </nav>
    <hr
      class="v-divider theme--light"
    />
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: service-weather-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; margin-top: 0px; transform: translateX(0px); width: 450px;"
>
  <div>
    <nav
      class="v-toolbar theme--light secondary"
      style="margin-top: 0px; padding-right: 0px; padding-left: 0px; transform: translateY(0px);"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <div
          class="layout row align-center"
        >
          <div
            class="flex white--text subheading"
          >
            Service weather settings
          </div>
          <button
            class="v-btn v-btn--icon theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light white--text"
              >
                close
              </i>
            </div>
          </button>
        </div>
      </div>
    </nav>
    <hr
      class="v-divider theme--light"
    />
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: stats-calendar-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; margin-top: 0px; transform: translateX(0px); width: 450px;"
>
  <div>
    <nav
      class="v-toolbar theme--light secondary"
      style="margin-top: 0px; padding-right: 0px; padding-left: 0px; transform: translateY(0px);"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <div
          class="layout row align-center"
        >
          <div
            class="flex white--text subheading"
          >
            Stats calendar settings
          </div>
          <button
            class="v-btn v-btn--icon theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light white--text"
              >
                close
              </i>
            </div>
          </button>
        </div>
      </div>
    </nav>
    <hr
      class="v-divider theme--light"
    />
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: testing-weather-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; margin-top: 0px; transform: translateX(0px); width: 450px;"
>
  <div>
    <nav
      class="v-toolbar theme--light secondary"
      style="margin-top: 0px; padding-right: 0px; padding-left: 0px; transform: translateY(0px);"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <div
          class="layout row align-center"
        >
          <div
            class="flex white--text subheading"
          >
            Testing weather
          </div>
          <button
            class="v-btn v-btn--icon theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light white--text"
              >
                close
              </i>
            </div>
          </button>
        </div>
      </div>
    </nav>
    <hr
      class="v-divider theme--light"
    />
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: text-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; margin-top: 0px; transform: translateX(0px); width: 450px;"
>
  <div>
    <nav
      class="v-toolbar theme--light secondary"
      style="margin-top: 0px; padding-right: 0px; padding-left: 0px; transform: translateY(0px);"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <div
          class="layout row align-center"
        >
          <div
            class="flex white--text subheading"
          >
            Text settings
          </div>
          <button
            class="v-btn v-btn--icon theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light white--text"
              >
                close
              </i>
            </div>
          </button>
        </div>
      </div>
    </nav>
    <hr
      class="v-divider theme--light"
    />
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: user-statistics-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; margin-top: 0px; transform: translateX(0px); width: 450px;"
>
  <div>
    <nav
      class="v-toolbar theme--light secondary"
      style="margin-top: 0px; padding-right: 0px; padding-left: 0px; transform: translateY(0px);"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <div
          class="layout row align-center"
        >
          <div
            class="flex white--text subheading"
          >
            User statistics settings
          </div>
          <button
            class="v-btn v-btn--icon theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light white--text"
              >
                close
              </i>
            </div>
          </button>
        </div>
      </div>
    </nav>
    <hr
      class="v-divider theme--light"
    />
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` without sidebar name 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--close v-navigation-drawer--fixed v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; margin-top: 0px; transform: translateX(450px); width: 450px;"
>
  <!---->
  <div
    class="default-slot"
  />
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;
